verif/test/deca/syntax/invalid/missing-brace-verif.res
src/test/deca/syntax/invalid/missing-brace.deca:13:0: missing '}' at '<EOF>'
